// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand navbar-dark bg-dark"
    style="z-index: 2;"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        TeaTime
      </a>
      <div
        class="me-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/my-teas"
          href="/my-teas"
        >
          My Teas
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/wish-list"
          href="/wish-list"
        >
          Wish List
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/discover"
          href="/discover"
        >
          Discover
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/profile"
          href="/profile"
        >
          Profile
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/help"
          href="/help"
        >
          Help
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/"
          href="/"
        >
          Logout
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand navbar-dark bg-dark"
    style="z-index: 2;"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        TeaTime
      </a>
      <div
        class="me-auto navbar-nav"
      >
        <a
          class="nav-link"
          data-rr-ui-event-key="/login"
          href="/login"
        >
          Login
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/signup"
          href="/signup"
        >
          Signup
        </a>
        <a
          class="nav-link"
          data-rr-ui-event-key="/help"
          href="/help"
        >
          Help
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
